--- a/index.html
+++ b/index.html
@@ -1,11 +1,2 @@
-<!DOCTYPE HTML>
-<html lang="en-US">
-  <head>
-    <meta charset="UTF-8">
-    <meta http_equiv="refresh" content="1;url=html/index.html">
-    <title>Page Redirection</title>
-  </head>
-  <body>
-    If you are not redirected automatically, follow the <a href="html/index.html">link to the documentation</a>.
-  </body>
-</html>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<html><head><meta http-equiv=Refresh content="0;url=html/index.html"></head></html>
